--- a/livedata/index.html
+++ b/livedata/index.html
@@ -608,5 +608,5 @@
 
     <p>Implementa un Model con una variable <w>LiveData</w> que vaya emitiendo datos cuando se la observa.</p>
     <p>Implementa un ViewModel que transforme los datos del Modelo en otro <w>LiveData</w>.</p>
-    <p>Implementa una Vista que observe el LiveData del ViewModel y lo muestre al usuario con imágenes.</p>
+    <p>Implementa una Vista que observe el <w>LiveData</w> del ViewModel y lo muestre al usuario con imágenes.</p>
 </section>
