--- a/inicicss/index.html
+++ b/inicicss/index.html
@@ -38,7 +38,7 @@
     <check>El desenvolupament de la web haurà de complir, al menys, els següents criteris:</check>
     <ul>
         <li>
-            Una pàgina principal on estigui la llista de receptes:
+            Una pàgina principal on estigui la llista de receptes (<w>&lt;ul&gt;</w> o <w>&lt;ol&gt;</w>):
             <ul>
                 <li>Aquesta llista ha d'estar imbrincada, classificant les receptes en categories
                 <li>Cada element de la llista ha d'enllaçar a una altra pàgina on es trobi la recepta.
