--- a/javatutorial/index.html
+++ b/javatutorial/index.html
@@ -17,6 +17,7 @@
             <li><a href="5">Sentències condicionals</a></li>
             <li><a href="6">Sentències de repetició</a></li>
             <li><a href="7">Sentències de ramificació</a></li>
+            <li><a href="8">Arrays</a></li>
         </ul>
         <p><a href="https://hackerrank.com/dam-m3">Exercicis</a></p>
     </abstract>
