--- a/livedata/index.html
+++ b/livedata/index.html
@@ -134,11 +134,11 @@
                   tools:context=&quot;.EntrenadorFragment&quot;&gt;
               
                   &lt;ImageView
-                      android:id=&quot;@+id/image&quot;
+                      android:id=&quot;@+id/ejercicio&quot;
                       android:layout_width=&quot;match_parent&quot;
                       android:layout_height=&quot;match_parent&quot; /&gt;
                   &lt;TextView
-                      android:id=&quot;@+id/time&quot;
+                      android:id=&quot;@+id/repeticion&quot;
                       android:layout_width=&quot;match_parent&quot;
                       android:layout_height=&quot;wrap_content&quot;
                       android:gravity=&quot;center&quot;
