--- a/livedata/index.html
+++ b/livedata/index.html
@@ -540,7 +540,7 @@
     hay que pasarle el Fragment, y decirle la imagen que quieres cargar y el ImageView donde lo quieres cargar:</p>
 
     <sc java>
-        Glide.with(fragment).load(imagen).into(imageView);
+        Glide.with(<replace>fragment</replace>).load(<replace>imagen</replace>).into(<replace>imageView</replace>);
     </sc>
 
     <p>La implementación de la vista queda así:</p>
