--- a/livedata/index.html
+++ b/livedata/index.html
@@ -19,7 +19,7 @@
 
     <img src="img/livedata.gif"/>
 
-    <a href="https://github.com/gerardfp/LiveData">https://github.com/gerardfp/LiveData</a>
+    <a href="https://github.com/gerardfp/livedata">https://github.com/gerardfp/livedata</a>
   </abstract>
 </header>
 
