--- a/mvvm/index.html
+++ b/mvvm/index.html
@@ -14,7 +14,7 @@
         <p>Usaremos las clases <w>ViewModel</w> y <w>LiveData</w>.</p>
         <p>Desarrollaremos una app que consiste en una Calculadora de la cuota de hipoteca:</p>
         <img src="img/p4mvvm.gif">
-        <a href="https://github.com/gerardfp/MVVM">https://github.com/gerardfp/MVVM</a>
+        <a href="https://github.com/gerardfp/mvvm">https://github.com/gerardfp/mvvm</a>
     </abstract>
 </header>
 
