--- a/room/index.html
+++ b/room/index.html
@@ -12,7 +12,7 @@
         una librería (ORM) para la persistencia local de datos en una base de datos SQLite.
     </p>
 
-    <p>Modificaremos la app de la práctica anterior para que guarde los <strong>elementos genéricos</strong>
+    <p>Modificaremos la app de la <a href="../recyclerview/">práctica anterior</a> para que guarde los <strong>elementos genéricos</strong>
         en una base de datos. De esta forma, los datos no se perderán cuando se cierre la app.</p>
 
     <img src="img/recyclerview.gif"/>
@@ -23,5 +23,67 @@
 
 
 <section>
+    <h2>Crea el proyecto</h2>
+
+    <p>Clona (o descarga) el proyecto anterior: <a href="https://github.com/gerardfp/recyclerview">https://github.com/gerardfp/recyclerview</a></p>
+
+    <optional>
+        <p>Puedes añadir ahora las dependencias para la librería Room, 
+            o puedes hacer que el propio Android Studio lo haga después (con <kbd>Ctrl + Intro</kbd>)</p>
+
+        <scfile>
+            build.gralde (Module: app)
+        </scfile>
+        <sc none>
+            dependencies {
+
+                implementation 'androidx.room:room-runtime:2.2.5'
+                annotationProcessor 'androidx.room:room-compiler:2.2.5'
+            }
+        </sc>
+    </optional>
+</section>
+
+<section>
+    <h2>Room</h2>
+
+    <p>Para usar la librería Room hay que definir 3 componentes:</p>
+
+    <ul>
+        <li>
+            <p><strong>Database</strong>: contiene la referencia a la base de datos.</p>
+
+            <p>Esta clase se debe anotar con <w>@Database</w> y debe:</p>
+            <ul>
+                <li><p>Ser una clase abstracta que extienda de <w>RoomDatabase</w></p></li>
+                <li><p>Incluir la lista de entidades dentro de la anotación <w>@Database</w></p></li>
+                <li><p>Contener un método abstracto que retorne la clase anotada con <w>@Dao</w></p></li>
+            </ul>
+
+        </li>
+        <li><p><strong>Entity</strong>: representa una tabla de la base de datos.</p>
+            <p>Las entidades se definen con clases anotadas con <w>@Entity</w>. Cada campo de clase correspone a 
+            un campo de la tabla.</p>
+        </li>
+        <li>
+            <p><strong>Dao</strong>: contiene los métodos con las consultas para acceder a la base de datos.</p>
+            <p>Esta clase se debe anotar con <w>@Dao</w>.</p>
+            <p>Los métodos de acceso se anotan con <w>@Query</w>, <w>@Insert</w>, <w></w></p>
+        </li>
+    </ul>
+
+    <h3>Database</h3>
+    <p>En primer lugar hay que crear una clase abstracta que extienda de <w>RoomDatabase</w>. 
+        Esta clase servirá para crear una base de datos nueva, o obtenerla si ya está creada.</p>
+
+    <p>Hay que crear esta clase utilizando el patrón <a href="https://en.wikipedia.org/wiki/Singleton_pattern#Lazy_initialization">singleton</a>, 
+        que asegura que solo habrá una única instancia de la base de datos.
+    </p>
+
+    <p>La clase se debe anotar con <w>@Database</w> indicando las entitdades (tablas).</p>
+
+    <h3>Entities</h3>
+    <p>Las tablas de la base de datos se definen anotando una clase con <w>@Entity</w></p>
+
 
 </section>
