--- a/retrofit/index.html
+++ b/retrofit/index.html
@@ -624,7 +624,7 @@
             <img src="img/fb4.png">
         </li>
         <li>
-            <p>Vuelve a la base de datos, y añade el campo "imagen" al documento (<em>album</em>), el valor de este campo será
+            <p>Vuelve a la base de datos, y añade el campo "portada" al documento (<em>album</em>), el valor de este campo será
             la URL de la imagen: </p>
 
             <img src="img/fb5.png">
